stylesheet.css
body {
    background-color: #f2eae3;
    margin: 1em;
    padding: 0;
}

/* Desktop Version */
@media (max-width: 1440px) {

.card{
    width: 40em;
    height: 481px;
    background-color: white;
    border: #f2eae3 solid 1px;
    border-radius: 10px 10px 10px 10px;
    box-sizing: border-box;

    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto;
    place-items: center;
    justify-content: center;
    align-items: center;
    justify-self: center;
    align-self: center;
}

.content{
    padding-right: 2em;
    padding-left: 2em;
}

.product{
    color: #a2a3a8;
    letter-spacing: 0.2em;
    font-size: 14px;
    text-transform: uppercase;
    margin-bottom: 0.5em;

    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
}

.productImage {
    border-radius: 10px 0px 0px 10px;
    width: 20em;
    height: fit-content;
}

.productImageMobile {
    display: none;
}

h1{
    font-size: 2.5em;
    margin: 0;
    padding-top: 0.5em;
    padding-bottom: 0.5em;

    font-family: "Fraunces", serif;
    font-weight: 700;
    font-style: normal;
    font-variation-settings:
        "SOFT" 0,
        "WONK" 0;
}


.productDescription{
    color: #a2a3a8;
    font-size: 14px;

    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
}

.price{
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto;
    place-items: center;
}

.currentPrice{
    color: hsl(158, 36%, 37%);
    font-size: 2em;
    justify-self: left;

    font-family: "Fraunces", serif;
    font-weight: 700;
    font-style: normal;
    font-variation-settings:
    "SOFT" 0,
    "WONK" 0;
}

.originalPrice{
    text-decoration: line-through;
    color: gray;
    justify-self: left;
    padding-left: 0.5em;
}

.btnAddToCart {
    background-color: hsl(158, 36%, 37%);
    color: white;
    border: none;
    border-radius: 8px;
    width: 100%;
    font-weight: bold;    

    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto;
    place-items: center;
}

button:active {
    background-color: hsl(158, 42%, 18%);
    cursor: pointer;
    box-shadow: 2px 2px 5px hsl(158, 42%, 18%);
    transform: translateY(2px);
}

.cartIcon{
    padding-right: 1em;
    justify-self: right;
}

.btnContent{
    justify-self: left;

    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
}

}

/* Mobile Version */
@media (max-width: 375px) {

    .card{
        width: 20em;
        height: fit-content;
        background-color: white;
        border: #f2eae3 solid 1px;
        border-radius: 10px 10px 10px 10px;
        box-sizing: border-box;

        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto;
        place-items: center;
        justify-content: center;
        align-items: center;
        justify-self: center;
        align-self: center;
    }

    .content{
        padding: 1.5em;
    }

    .productImage {
        display: none;
    }

    .productImageMobile {
        display: block;
        border-radius: 10px 10px 0px 0px;
        width: 100%;
        height: fit-content;
    }
}

